--- a/extensions/born_accessible/css/smart.css
+++ b/extensions/born_accessible/css/smart.css
@@ -4,16 +4,19 @@
 }
 
 #born_accessible h3 {
-	margin-bottom: 0;
 	font-size: 135%;
 	font-weight: normal;
+	border-bottom: 0.1rem solid rgb(0,0,120);
+	padding-bottom: 1rem;
+	margin-top: -1rem;
+	margin-bottom: 2rem;
 }
 
 #born_accessible h4 {
 	font-size: 120%;
 	font-weight: normal;
 	color: rgb(0,0,180);
-	margin: 7rem 0 0 0;
+	margin: 3rem 0 0 0;
 }
 
 #born_accessible > section {
@@ -26,7 +29,7 @@
 }
 
 #born_accessible > section#ba-scoring > div.form-data {
-	margin-top: 3rem;
+	margin-top: -1rem;
 }
 
 #born_accessible > fieldset + section {
@@ -65,6 +68,9 @@
 #born_accessible fieldset.test {
 	border: 0.2rem solid rgb(255, 255, 180);
 	background-color: rgb(250,250,250);
+	margin-top: 2rem;
+	padding: 2rem;
+	border-radius: 0.5rem;
 }
 
 #born_accessible fieldset > .ba-label {
